- Refactored using a module design philosophy

--- a/config.properties
+++ b/config.properties
@@ -1,3 +1,5 @@
 #Test Properties
-# browser: firefox, chrome, htmlunit
+# browser: firefox, chrome, htmlunit, IE
 browser=firefox
+# mode: staging, production
+mode=staging
