- Added support to finish the Settings Tests - Finished the Settings Test - Added Browser actions such as back, forward, refresh - Moved assertError to Common folder - Did prep work for Admin Test

--- a/config.properties
+++ b/config.properties
@@ -5,3 +5,5 @@ browser=firefox
 mode=staging
 # timeout: set max time to wait for web element to appear
 timeout=10
+# OS: windows, mac, linux
+os=windows
